--- a/src/Components/Covid19/Covid19.css
+++ b/src/Components/Covid19/Covid19.css
@@ -44,12 +44,9 @@
     flex-direction: column;
     align-items: center;
 }
-h5{
+.covidh5{
   margin-top: 5vh;
   padding-top: 5vh;
   text-decoration: underline;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-label{
-  margin: 5vh;
 }
